<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/coloniesButton"
            android:text="@string/button_name_colonies"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/colonistsButton"
            android:text="@string/button_name_colonists"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/basesButton"
            android:text="@string/button_name_bases"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/militaryButton"
            android:text="@string/button_name_military"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/ffonButton"
            android:text="@string/button_name_ffon"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/ffoffButton"
            android:text="@string/button_name_ffoff"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/doneButton"
            android:text="@string/button_name_done"/>




</LinearLayout>