<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageEarth" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/content_desc_earth"
            android:src="@drawable/earth"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageMars" android:layout_toRightOf="@id/imageEarth"
            android:layout_margin="5dp"
            android:contentDescription="@string/content_desc_mars"
            android:src="@drawable/mars"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageVenus" android:layout_below="@id/imageEarth"
            android:layout_margin="5dp"
            android:contentDescription="@string/content_desc_venus"
            android:src="@drawable/venus"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageJupiter" android:layout_toRightOf="@id/imageVenus"
            android:layout_below="@id/imageMars" android:layout_margin="5dp"
            android:contentDescription="@string/content_desc_jupiter"
            android:src="@drawable/jupiter"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageSaturn" android:layout_below="@id/imageVenus"
            android:layout_margin="5dp"
            android:contentDescription="@string/content_desc_saturn"
            android:src="@drawable/saturn"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageNeptune" android:layout_toRightOf="@id/imageSaturn"
            android:layout_below="@id/imageJupiter" android:layout_margin="5dp"
            android:contentDescription="@string/content_desc_neptune"
            android:src="@drawable/neptune"/>


</RelativeLayout>