<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_name_label"
            android:id="@+id/textView" android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_name_label"
            android:id="@+id/dataView"
            android:layout_toRightOf="@+id/textView"
            android:layout_marginLeft="36dip"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_mass_label"
            android:id="@+id/textView2" android:layout_below="@+id/textView" android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_mass_label"
            android:id="@+id/dataView2"
            android:layout_alignStart="@id/dataView"
            android:layout_toRightOf="@id/textView2"
            android:layout_below="@id/dataView"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_gravity_label"
            android:id="@+id/textView3" android:layout_below="@+id/textView2" android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_mass_label"
            android:id="@+id/dataView3"
            android:layout_alignStart="@id/dataView2"
            android:layout_toRightOf="@id/textView3"
            android:layout_below="@id/dataView2"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_colonies_label"
            android:id="@+id/textView4" android:layout_below="@+id/textView3" android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_mass_label"
            android:id="@+id/dataView4"
            android:layout_alignStart="@id/dataView3"
            android:layout_toRightOf="@id/textView4"
            android:layout_below="@id/dataView3"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_population_label"
            android:id="@+id/textView5" android:layout_below="@+id/textView4" android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_mass_label"
            android:id="@+id/dataView5"
            android:layout_alignStart="@id/dataView4"
            android:layout_toRightOf="@id/textView5"
            android:layout_below="@id/dataView4"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_military_label"
            android:id="@+id/textView6" android:layout_below="@+id/textView5" android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_mass_label"
            android:id="@+id/dataView6"
            android:layout_alignStart="@id/dataView5"
            android:layout_toRightOf="@id/textView6"
            android:layout_below="@id/dataView5"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_bases_label"
            android:id="@+id/textView7" android:layout_below="@+id/textView6" android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_mass_label"
            android:id="@+id/dataView7"
            android:layout_alignStart="@id/dataView6"
            android:layout_toRightOf="@id/textView7"
            android:layout_below="@id/dataView6"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_forcefield_label"
            android:id="@+id/textView8" android:layout_below="@+id/textView7" android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet_mass_label"
            android:id="@+id/dataView8"
            android:layout_alignStart="@id/dataView7"
            android:layout_toRightOf="@id/textView8"
            android:layout_below="@id/dataView7"
            />
'</RelativeLayout>